# remote_code_docker_deployment

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  main.py
app/api/: containers.py  health.py
app/core/: config.py
app/models/: schemas.py
app/services/: docker_service.py
